Add reference for Workday

--- a/HCCSManager/App.config
+++ b/HCCSManager/App.config
@@ -12,4 +12,28 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="ReportBinding">
+          <security mode="Transport" />
+        </binding>
+        <binding name="ReportBinding1" />
+      </basicHttpBinding>
+       <customBinding>
+          <binding name="ReportCustomBinding">
+             <security authenticationMode="UserNameOverTransport" includeTimestamp="false"/>
+             <textMessageEncoding messageVersion="Soap11">
+                <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647"/>
+             </textMessageEncoding>
+             <httpsTransport maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647" realm=""/>
+          </binding>
+       </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://services1.myworkday.com/ccx/service/Report2/schumacher/Lee_Marrette/HCCS_Initial_Load"
+        binding="customBinding" bindingConfiguration="ReportCustomBinding"
+        contract="WorkdayHCCS.ReportPort" name="Report" />
+    </client>
+  </system.serviceModel>
 </configuration>
