--- a/HCCSManager/HCCSManager.csproj
+++ b/HCCSManager/HCCSManager.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,12 +64,25 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\WorkdayHCCS\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Service References\WorkdayHCCS\HCCSManager.WorkdayHCCS.Report_EntryType.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\WorkdayHCCS\Report.wsdl" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\WdConnect\WdConnect\WdConnect.csproj">
+      <Project>{1BA2E8E4-60C6-436F-9C1A-9A4B5A5F2411}</Project>
+      <Name>WdConnect</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataModel\DataModel.csproj">
       <Project>{9271E510-285C-44F1-A8B7-2DA779D54EE4}</Project>
       <Name>DataModel</Name>
@@ -80,6 +95,24 @@
     <EmbeddedResource Include="Migrations\201401152213199_NullableDates.resx">
       <DependentUpon>201401152213199_NullableDates.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\WorkdayHCCS\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\WorkdayHCCS\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\WorkdayHCCS\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\WorkdayHCCS\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
