--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -46,6 +46,7 @@
     <Compile Include="FieldChange.cs" />
     <Compile Include="NewHire.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Staging.cs" />
     <Compile Include="Termination.cs" />
     <Compile Include="UserIdChange.cs" />
   </ItemGroup>
